force-app/main/default/objects/GovernorName__mdt/GovernorName__mdt.object-meta.xml
<CustomObject>
    <label>GovernorName</label>
    <pluralLabel>GovernorNames</pluralLabel>
</CustomObject>