force-app/main/default/objects/GovernorName__mdt/fields/MiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>MiddleInitial__c</fullName>
    <description>Add punctuation period (.) after the middle initial.</description>
    <label>MiddleInitial</label>
    <length>2</length>
    <type>Text</type>
</CustomField>